# terrier

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml  justfile  nginx-dev.conf  package-lock.json  terrier.code-workspace
.husky/: commit-msg  pre-commit
scripts/: dev.sh  setup.sh
terrier-backend/: .env.example  Cargo.toml  Dockerfile  README.md
terrier-backend/migration/: Cargo.toml
terrier-backend/migration/src/: lib.rs  m20250922_204521_create_users_table.rs  m20250929_221212_add_user_role.rs  m20250930_182935_create_hackathons_table.rs  m20250930_183801_create_user_hackathon_roles_table.rs  m20250930_225342_remove_individual_user_role.rs
terrier-backend/src/: config.rs  docs.rs  main.rs
terrier-backend/src/auth/: extractors.rs  handlers.rs  middleware.rs  mod.rs
terrier-backend/src/entities/: hackathons.rs  mod.rs  prelude.rs  user_hackathon_roles.rs  users.rs
terrier-backend/src/hackathons/: handlers.rs
terrier-client/: Dockerfile  README.md  biome.json  biome.jsonc  nginx.conf  package.json  svelte.config.js  vite.config.js  vite.config.ts
terrier-client/src/: app.css  app.html
terrier-client/src-tauri/: Cargo.toml  tauri.conf.json
terrier-client/src-tauri/src/: main.rs
terrier-client/src/components/: date-range-picker.svelte  error-page.svelte  time-range-field.svelte
terrier-client/src/components/icons/: ScottyLabs_filled.svelte  calendar.svelte  clipboard-check.svelte  cube-01.svelte  file-05.svelte  home-03.svelte  log-out-01.svelte  message-text-square-01.svelte  qr-code-01.svelte  scales-01.svelte  tool-01.svelte  user-02.svelte  users-01.svelte
terrier-client/src/lib/: api.ts  auth.svelte.ts  permissions.ts  schema.d.ts
terrier-client/src/routes/: +error.svelte  +layout.svelte  +page.svelte
terrier-client/src/routes/application/: +page.svelte
terrier-client/src/routes/h/[hackathonId]/: +layout.svelte  +page.svelte
terrier-client/src/routes/h/[hackathonId]/application/: +page.svelte
terrier-client/src/routes/h/[hackathonId]/judging/: +page.svelte
terrier-client/src/routes/h/[hackathonId]/profile/: +page.svelte
terrier-client/src/routes/profile/: +page.svelte
terrier-docs/: README.md  package.json
